debugging of model

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     </td>	
   </tr>
 </table>
+<!-- Angular Model data isn't normally shown in the page; here for debugging purposes-->
+<pre>
+  {{moleTable | json}}
+</pre>
 </body>
 <script type="text/javascript">
     var myApp = angular.module('WAM', []);  
