--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html ng-app="WAM">
 <head>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-resource.min.js"></script>
 <title>Whack-a-mole Angular Edition</title>
 </head>
 <body ng-controller="WamCtrl">
@@ -18,12 +19,9 @@
 </pre>
 </body>
 <script type="text/javascript">
-    var myApp = angular.module('WAM', []);  
-    myApp.controller('WamCtrl', ['$scope', function($scope) {
-        $scope.moleTable = [
-            { moles : [ { up: true }, { up: false } ] },
-            { moles : [ { up: false }, { up: true } ] },
-        ];
+    var myApp = angular.module('WAM', ['ngResource']);  
+    myApp.controller('WamCtrl', ['$scope', '$resource', function($scope, $resource) {
+        $scope.moleTable = $resource("moleTable.json").get();
     }]);
 </script>
 </html>
